2024-01-30, 2차 자체 로그인 복원